web/css/layers.css
/* ... */
.layers-all .metadata-more {
  cursor: pointer;
  margin-top: 4px;
}

.layers-all .metadata-more:hover,
.layer-modal-content .measurement-row .metadata-more:hover {
  background: rgba(255, 255, 255, 0.3);
  cursor: pointer;
}

.layers-all .metadata-more .ellipsis,
.measurement-row .ellipsis {
  display: block;
  height: 12px;
  width: 40px;
  background: #d54e21 none repeat scroll 0 0;
  color: #fff;
  line-height: 0;
  margin: 0 auto;
  font-size: 1.5em;
  text-align: center;
  font-weight: 700;
}

.layers-all .metadata-more .ellipsis.up,
.layer-modal-content .measurement-row .metadata-more .ellipsis.up {
  font-size: 1em;
  line-height: 1em;
}

.layer-modal-content .measurement-row h3.source-orbits-title {
  color: #ddd;
  font-weight: 700;
  padding: 10px 0;
}

.layers-all .iCheck-checkbox {
  float: right;
  margin-top: 0.5em;
}

.layer-info-settings-modal {
  margin-left: auto;
  margin-right: auto;
  top: 0;
  left: 298px;
  right: auto;
  bottom: auto;
  border-radius: 6px;
  position: absolute;
}

.layer-settings-modal .modal-title {
  font-size: 15px;
}

.layer-settings-modal,
.layer-settings-modal .close {
  color: #fff;
}

.layer-settings-modal .modal-content {
  background: #282828;
  width: 300px;
}

.layer-settings-modal .nav-item {
  width: 100%;
  border: 1px solid transparent;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}

.layer-settings-modal .nav-item.dual {
  width: 136px;
}

.layer-settings-modal .nav-item:hover {
  border: 1px solid #fff;
}

.layer-settings-modal .nav-link {
  border: none;
}

.layer-settings-modal .nav-item.active {
  background: #fff;
  border-color: #fff;
  color: #000;
}

.layer-settings-modal .tab-content {
  padding: 5px;
  background: #484848;
}

.layer-settings-modal .settings-component {
  margin-bottom: 14px;
  padding: 0 4px;
}

.layer-settings-modal .tab-content .layer-threshold-select {
  margin-top: 10px;
}

.layer-settings-modal .layer-threshold-select {
  height: 58px;
}

.layer-settings-modal .tab-content .wv-palette-selector {
  width: 266px;
}

.granule-date-item-up-button,
.granule-date-item-down-button,
.granule-date-item-top-button {
  background: #555;
  color: #eee;
}

.granule-date-item-up-button:hover,
.granule-date-item-down-button:hover,
.granule-date-item-top-button:hover {
  background: #eee;
  color: #555;
  /* color: #0087f1; */
}

/** inline-block extra spacing */
.wv-palette-selector .wv-checkbox input {
  margin-left: 6px;
}

.layer-settings-modal .tab-content .noUi-target {
  margin: 10px 18px;
}

.layer-settings-modal .wv-header {
  font-size: 14px;
  margin-bottom: 8px;
}

.layer-opacity-select .wv-header,
.layer-granule-count-select .wv-header {
  margin-top: 0;
}

.layer-settings-modal .wv-header.wv-color-palette-label {
  margin-bottom: 0.5em;
}

.tab-content .wv-palette-selector-row label {
  margin-left: 3px;
}

.layer-settings-modal .wv-label {
  color: #fff;
  width: 100%;
  position: relative;
}

.layer-settings-modal .wv-label-opacity,
.layer-settings-modal .wv-label-granule-count {
  text-align: right;
}

.layer-settings-modal .wv-label-range {
  color: #fff;
}

.layer-settings-modal .wv-label-range-min {
  float: left;
}

.layer-settings-modal .wv-label-range-max {
  float: right;
}

.layer-settings-modal .wv-palette-squash {
  float: right;
  margin-top: -26px;
}

/* Layers Info */
.sidebar-panel li.item a.wv-layers-info {
  color: #333;
  text-align: center;
}

.sidebar-panel li.item a.wv-layers-info .wv-layers-info-icon {
  border-color: #333;
}

.sidebar-panel li.item a.wv-layers-info.disabled {
  color: #aaa;
}

.sidebar-panel li.item a.wv-layers-info.disabled .wv-layers-info-icon {
  border-color: #aaa;
}

.sidebar-panel li.item a.wv-layers-info.disabled:hover {
  cursor: no-drop;
  background-color: transparent;
}

.sidebar-panel li.layer-hidden a.wv-layers-info {
  color: #999;
}

.sidebar-panel li.layer-hidden a.wv-layers-info .wv-layers-info-icon {
  border-color: #999;
}

.sidebar-panel li.layer-hidden a.wv-layers-info.disabled {
  color: #666;
}

.sidebar-panel li.layer-hidden a.wv-layers-info.disabled .wv-layers-info-icon {
  border-color: #666;
}

.custom-layer-dialog {
  width: 978px;
  max-width: 978px;
  background-color: #e8e8e8;
}

.custom-layer-dialog .product-outter-list-case {
  width: 963px;
  padding: 0 13px 13px 0;
}

.custom-layer-dialog .modal-header {
  border-bottom: none;
}

.custom-layer-dialog .modal-header .close {
  font-size: 30px;
  color: #000;
}

.custom-layer-dialog .modal-title {
  width: 100%;
}

.custom-layer-dialog .modal-body {
  padding: 0 0 0 13px;
}

.custom-layer-dialog .category-masonry-case {
  overflow: hidden;
}

.layer-bread-crumb .breadcrumb {
  margin-bottom: 0;
  background-color: #fff;
  margin-right: 10px;
}

.custom-layer-dialog .back-button {
  margin-right: 10px;
}

@media (max-width: 1024px) {
  .custom-layer-dialog {
    width: 658px;
  }

  .custom-layer-dialog .product-outter-list-case {
    width: 643px;
  }
}

@media (max-width: 700px) {
  .measurement-row .source-settings {
    border-top: 1px solid #d54e21;
    margin-top: 10px;
    padding-top: 5px;
  }

  .custom-layer-dialog {
    width: auto;
  }

  .layer-category {
    width: 100%;
  }

  .custom-layer-dialog .product-outter-list-case {
    width: 100%;
  }

  .category-background-cover {
    background-size: cover;
  }

  .layer-modal-content .categories-nav .nav-link {
    font-size: 11px;
    padding: 1px 7px;
    margin: 0 12px 0 0;
  }
}

